# LabelJetty

./: .dockerignore  .gitignore  Dockerfile  README.md  build-container.sh  pyproject.toml  sample.env
.github/workflows/: docker-dev.yml  docker.yml  pypi.yml
deploy/: install.sh
deploy/rpi/: README.md  comitup.conf  docker-compose.yml  labeljetty-provision.service  provision.sh
deploy/rpi/boot/: custom.toml.example
docs/: BUILD.md  README.docker.md  README.pypi.md  TESTING.md  advanced-usage.md  configuration.md  design.md  developing.md  hardware.md  roadmap.md  setup.md
scratchpad_code/: tspl_detect.py  tspl_printer_connection.py
src/labeljetty/: __init__.py  app.py  config.py  testbench.py  version.py
src/labeljetty/core/: db.py  logging.py
src/labeljetty/integrations/: homebox.py
src/labeljetty/printer/: connection.py  render.py  tspl.py
src/labeljetty/service/: worker.py
src/labeljetty/web/: api.py  app.py  auth.py  ui.py
src/labeljetty/web/static/: style.css
src/labeljetty/web/templates/: _status.html  base.html  settings.html
tests/: conftest.py  test_api.py  test_config.py  test_connection.py  test_settings.py  test_tspl.py
tspl_printer_service/: Project_desc_goals.md  api_app.py  api_auth.py  api_routes.py  config.py  db.py  homebox.py  label_render.py  log.py  main.py  print_service.py  testbench.py  tspl_printer.py  tspl_printer_connection.py  ui_routes.py  utils.py
