[project]
name = "tspl-printer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "getenv>=0.2.0",
    "getversion>=1.0.2",
    "itsdangerous>=2.2.0",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "pydantic-settings>=2.12.0",
    "pyserial>=3.5",
    "python-multipart>=0.0.20",
    "pyusb>=1.3.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
