[project]
name = "labeljetty"
# Version is derived from the latest git tag by hatch-vcs (see [tool.hatch.version]).
# Tags are plain "0.0.1" (an optional leading "v" is accepted too).
dynamic = ["version"]
description = "Network-accessible printing for USB TSPL thermal label printers (library + REST API + web UI)."
# PyPI shows a slimmer README than the GitHub one; it links back to the repo.
readme = "docs/README.pypi.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "getenv>=0.2.0",
    "getversion>=1.0.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "pillow>=11.3.0",
    "psutil>=7.1.3",
    "python-barcode>=0.15.1",
    "pydantic-settings>=2.12.0",
    "pypdfium2>=4.30.0",
    "pyserial>=3.5",
    "python-multipart>=0.0.20",
    "segno>=1.6.0",
    "pyusb>=1.3.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[project.scripts]
labeljetty = "labeljetty.app:run"
labeljetty-testbench = "labeljetty.testbench:main"
labeljetty-hash-password = "labeljetty.web.password:hash_password_cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version comes from git tags. With no reachable tag (fresh clone, shallow CI
# checkout) setuptools_scm derives a dev version; CI builds use fetch-depth: 0.
[tool.hatch.version]
source = "vcs"

# Stamp the resolved version into a generated module so an installed package can
# report it without git. Gitignored — regenerated on every build.
[tool.hatch.build.hooks.vcs]
version-file = "src/labeljetty/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/labeljetty"]

[dependency-groups]
# Test/dev tooling. Install with:  uv sync --group dev
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra: summarise non-passing tests; --strict-markers: typo'd markers are errors.
# -m "not hardware": never auto-run tests that need a real printer (run those
# explicitly with `pytest -m hardware`).
addopts = '-ra --strict-markers -m "not hardware"'
markers = [
    "hardware: tests that require a real USB printer (deselected by default, never run in CI)",
]
